--- a/e/eh/eho/ehost.com.html
+++ b/e/eh/eho/ehost.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ehost.com privacy policy that was archived on 2004-06-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040618013821id_/http%3A//www.ehost.com/about/privacy.bml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ehost.com privacy policy that was archived on 2004-12-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041205201340id_/http%3A//www.ehost.com/about/privacy.bml) for the most accurate reproduction.-->
 
 <html><head>
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
@@ -67,7 +67,7 @@ text-decoration: none
 .disclaimer {font-family: Arial, Helvetica, sans-serif; font-size: 8pt; font-weight: bold; color: #0000A0}
 		.sales {FONT-FAMILY: arial,helvetica,sans serif; font-size:14px; COLOR:#FF0000; font-weight:bold;}
 .pageheader {font-family:Arial, Helvetica, sans-serif; font-size: 14pt; font-weight: bold; color: #FFFFFF}
-.pagesubheader {font-family:Arial, Helvetica, sans-serif; font-size: 10pt; font-weight: bold; color: #FFFF00}
+.pagesubheader {font-family:Arial, Helvetica, sans-serif; font-size: 10pt; font-weight: bold; color: #9999CC}
 .orangesubheader {
 font-family: Arial, Helvetica, sans-serif;
 font-size: 12px;
@@ -107,6 +107,9 @@ a.navitem:active { font: color: #99cc00 }
 		.probar { background: #000066; COLOR:#FFFFFF; font-family: Arial, Helvetica, sans-serif; font-size:11px; font-weight:bold;}
 
 
+
+		.keyword {COLOR: #000000; TEXT-DECORATION: none}
+		a.keyword:hover {TEXT-DECORATION: underline}
 
 
 
@@ -165,6 +168,17 @@ a.marginboxhead:active { font: color: #99cc00 }
 .resoldpvtlabel {font-family: Arial, Helvetica, sans-serif; font-size: 9pt; font-weight: bold; color: #000000; background: #999999}
 
 .addons {  font-family: Arial, Helvetica, sans-serif; font-size: 18px; color: #630063; font-weight: normal}
+		
+		
+		.monitor { background-color:#E7E7E7; FONT-FAMILY: Arial, Helvetica, sans-serif; font-size:11px; COLOR: #000000; }		
+		.monitorhead { background-color:#333366; FONT-FAMILY: Arial, Helvetica, sans-serif; font-size:12px; COLOR: #FFFFFF; }
+		.ctrlpaneloutline { background-color:#333366; padding: 1px 1px 1px 1px;}
+		.ctrlpanelheader { background-color:#333366; font-family: Arial, Helvetica, sans-serif; font-size:12px; COLOR: #FFFFFF; font-weight: bold;padding: 1px 1px 1px 1px;}
+		.ctrlpanelfooter { background-color:#333366;}
+		.ctrlpanelsectionheader { background-color:#CCCCCC; font-family: Arial, Helvetica, sans-serif; font-size:11px; COLOR: #000000; font-weight: bold; }
+		.ctrlpanelitem {font-family: Arial, Helvetica, sans-serif; font-size:11px; COLOR: #000000;  }
+		.oddrowcolor {font-family: Arial, Helvetica, sans-serif; font-size:11px; COLOR: #000000;   background-color:#FFFFFF; }
+		.evenrowcolor {font-family: Arial, Helvetica, sans-serif; font-size:11px; COLOR: #000000;   background-color:#E7E7E7; }
 
 		
 		.prodName  { COLOR: #000000; FONT-FAMILY: verdana, arial,sans serif; FONT-SIZE: 14px; FONT-WEIGHT: bold; }
@@ -205,10 +219,17 @@ a.marginboxhead:active { font: color: #99cc00 }
     <table border="0" cellpadding="0" cellspacing="0" width="100%" summary="Logo content">
       <tbody>
         <tr>
-          <td align="left">
+          <td align="left" rowspan="2">
             <a href="/"><img border="0" height="50" hspace="0" src="http://images.ehost.com/logos/logo_ehost.gif" width="170"></a>
           </td>
-          <td align="right" valign="bottom">
+          <td class="norm">
+            <font color="#FFFFFF">
+              <b>&nbsp;&nbsp;&nbsp;Have a question? Call us toll free at 1-866-563-4678</b>
+            </font>
+          </td>
+        </tr>
+        <tr>
+          <td valign="bottom">
             <table cellpadding="0" cellspacing="0" border="0">
               <tbody><tr>
                 <td><img src="http://images.ehost.com/tabs/tab_graycorner_16.gif" width="16" height="22" border="0" hspace="0"></td>
@@ -280,7 +301,8 @@ a.marginboxhead:active { font: color: #99cc00 }
                       <a href="/">home</a> &gt;
 		<a href="/about/">About Us</a> &gt;
 		Privacy Statement</span><br>
-                    <br><span class="norm">
+                    <br>
+                    <script src="/__utm.js" type="text/javascript"></script><span class="norm">
                       <block>	
 At eHost, we are committed to protecting your privacy.  The limited information we do collect is used to provide you with a personalized experience, better service, and at times, bring you value-added offers from our partners.<br>
 	  </block>
@@ -331,9 +353,18 @@ At eHost, we are committed to protecting your privacy.  The limited information 
                     </tbody></table>
                     <br><span class="norm">
                       <block>
-					If one has initially opted-in, our site provides users with the opportunity to opt out of receiving communications from eHost and our partners that are not directly related to the services we provide. Please note: eHost does reserve the right to send account-related e-mail communications to all active customers. 
-<p></p>To unsubscribe from eHost newsletters and promotional mailings, please update your preferences with our <a href="/utils/Subscribe.bml">subscription settings tool</a> or e-mail us at <a href="/support/supportForm.bml">eHost Support</a>.
-<p></p>If you would like to cancel a eHost plan completely, please contact eHost Support through our online <a href="/support/supportForm.bml">support form</a>.
+					During the registration process, you are provided with the opportunity to opt out of receiving  marketing and promotional communications from eHost and our partners that are not directly related to the services we provide. eHost, its affiliates or partners may use the information associated with your account to contact you with these special offers.
+					<p></p>
+
+					To unsubscribe from eHost newsletters and promotional mailings, please update your preferences with our <a href="/utils/Subscribe.bml">subscription settings tool</a> or e-mail us at <a href="/support/supportForm.bml">eHost Support</a>.
+					<p></p>
+
+					If you would like to cancel a eHost plan completely, please contact eHost Support through our online <a href="/support/supportForm.bml">support form</a>.
+					<p></p>
+										
+					Please note: eHost reserves the right to send e-mail communications relating directly to their accounts to all active members.
+					
+
 <br>
 	  </block>
                     </span>
@@ -364,7 +395,7 @@ At eHost, we are committed to protecting your privacy.  The limited information 
 					70 Blanchard Road, 3rd Floor<br>
 					Burlington, MA 01803<br>
 				</blockquote>
-					<p align="right">Updated September 10, 2002</p>
+					<p align="right">Updated June 23, 2004</p>
 	  </block>
                     </span>
                     <br>
