--- a/w/we/web/webcasts.com.html
+++ b/w/we/web/webcasts.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the webcasts.com privacy policy that was archived on 2004-06-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040605040135id_/http%3A//talkpointcommunications.com/pages/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the webcasts.com privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206161811id_/http%3A//www.talkpointcommunications.com/pages/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 	<title>TalkPoint: </title>
@@ -34,41 +34,32 @@
 			if(!x && document.getElementById) x=document.getElementById(n); return x;
 		}
 		
+		function MM_jumpMenu(targ,selObj,restore){ //v3.0
+			eval(targ+".location='"+selObj.options[selObj.selectedIndex].value+"'");
+			if (restore) selObj.selectedIndex=0;
+		}
+		function MM_preloadImages() { //v3.0
+			var d=document; if(d.images){ if(!d.MM_p) d.MM_p=new Array();
+				var i,j=d.MM_p.length,a=MM_preloadImages.arguments; for(i=0; i<a.length; i++)
+				if (a[i].indexOf("#")!=0){ d.MM_p[j]=new Image; d.MM_p[j++].src=a[i];}}
+		}
 		function MM_showHideLayers() { //v3.0
 			var i,p,v,obj,args=MM_showHideLayers.arguments;
 			for (i=0; i<(args.length-2); i+=3) if ((obj=MM_findObj(args[i]))!=null) { v=args[i+2];
 				if (obj.style) { obj=obj.style; v=(v=='show')?'visible':(v='hide')?'hidden':v; }
 				obj.visibility=v; }
 		}
-		function MM_jumpMenu(targ,selObj,restore){ //v3.0
-			eval(targ+".location='"+selObj.options[selObj.selectedIndex].value+"'");
-			if (restore) selObj.selectedIndex=0;
-		}
-		
-		function MM_preloadImages() { //v3.0
-			var d=document; if(d.images){ if(!d.MM_p) d.MM_p=new Array();
-				var i,j=d.MM_p.length,a=MM_preloadImages.arguments; for(i=0; i<a.length; i++)
-				if (a[i].indexOf("#")!=0){ d.MM_p[j]=new Image; d.MM_p[j++].src=a[i];}}
-		}
-		
-		function MM_swapImgRestore() { //v3.0
-			var i,x,a=document.MM_sr; for(i=0;a&&i<a.length&&(x=a[i])&&x.oSrc;i++) x.src=x.oSrc;
-		}
-		
-		function MM_findObj(n, d) { //v4.01
-			var p,i,x;	if(!d) d=document; if((p=n.indexOf("?"))>0&&parent.frames.length) {
-				d=parent.frames[n.substring(p+1)].document; n=n.substring(0,p);}
-			if(!(x=d[n])&&d.all) x=d.all[n]; for (i=0;!x&&i<d.forms.length;i++) x=d.forms[i][n];
-			for(i=0;!x&&d.layers&&i<d.layers.length;i++) x=MM_findObj(n,d.layers[i].document);
-			if(!x && d.getElementById) x=d.getElementById(n); return x;
-		}
-		function MM_openBrWindow(theURL,winName,features) { //v2.0
-      window.open(theURL,winName,features);
-    }
 		function MM_swapImage() { //v3.0
 			var i,j=0,x,a=MM_swapImage.arguments; document.MM_sr=new Array; for(i=0;i<(a.length-2);i+=3)
 			 if ((x=MM_findObj(a[i]))!=null){document.MM_sr[j++]=x; if(!x.oSrc) x.oSrc=x.src; x.src=a[i+2];}
 		}
+		function MM_swapImgRestore() { //v3.0
+			var i,x,a=document.MM_sr; for(i=0;a&&i<a.length&&(x=a[i])&&x.oSrc;i++) x.src=x.oSrc;
+		}
+		
+		function MM_openBrWindow(theURL,winName,features) { //v2.0
+      window.open(theURL,winName,features);
+    }
 				function hideMenus(parent) { 
 			// hide horizontal menus
 			if (parent != 1) MM_showHideLayers('Menu1','','hide');
@@ -110,44 +101,9 @@
 		<tr><!-- row 2 -->
 			<!-- spanned from row 1 -->
 			<td class="leftMenuArea" valign="top" width="250">
-				<span class="leftMenuText">	
-</span>			</td>
+				<span class="leftMenuText"></span>			</td>
 			<td class="contentArea" valign="top">
-				<span class="contentText">	This privacy policy describes how TalkPoint collects, uses and shares information about users of TalkPoint's Web site. 
-<br>
-
-<br>
-<b>Information You Provide to TalkPoint</b>
-<br>
-
-<br>
-TalkPoint receives and stores information users enter on the TalkPoint Web site or provide TalkPoint in any other way. TalkPoint uses the information that it receives for the purposes of communicating with users/potential users and providing them with information about the products and services of TalkPoint. 
-If TalkPoint transfers assets or has any change in control, user information may be transferred to the entity that acquires such assets or control of TalkPoint. TalkPoint shall release user information when TalkPoint considers it necessary to comply with law or as needed with respect to legal proceedings. TalkPoint e-mails its users who provide their e-mail address information dicussing the industry and TalkPoint offerings. <br><br>
-
-
-<b>Information Collected</b>
-<br>
-
-<br>
-Unless a user provides TalkPoint with the information, TalkPoint does not collect any personally identifying information from a user accessing the TalkPoint Web site, such as a user's name or e-mail address. TalkPoint does collect information such as the domain name from which users access the Internet, the Internet address of the Web site from which users link directly to the TalkPoint Web site, the time and date of users' visit, the pages that have visited and the page "click throughs." This information enables TalkPoint to determine the number of visitors to the pages of the TalkPoint Web site and how users access the TalkPoint Web site. 
-<br>
-
-<br>
-<b>Employment Inquiries</b>
-<br>
-
-<br>
-TalkPoint uses the resumes and information submitted to TalkPoint to determine whether or not a candidate's employment inquiry will be given consideration for employment openings at TalkPoint. Such information and resumes are only distributed within TalkPoint and its recruiting agencies. 
-<br>
-
-<br>
-<b>Binding Agreement; Changes</b>
-<br>
-
-<br>
-Any user that accesses all or any part of the TalkPoint Web site agrees that such user is at least eighteen (18) years old and that such user has consented to this privacy policy. Each time a user accesses the TalkPoint Web site, this privacy policy should be reviewed because TalkPoint reserves the right to change this privacy policy from time to time. 
-
-</span>			</td>
+				<span class="contentText"><!-- text -->This privacy policy describes how TalkPoint collects, uses and shares information about users of TalkPoint's Web site. <br><br><b>Information You Provide to TalkPoint</b><br><br>TalkPoint receives and stores information users enter on the TalkPoint Web site or provide TalkPoint in any other way. TalkPoint uses the information that it receives for the purposes of communicating with users/potential users and providing them with information about the products and services of TalkPoint. <!-- text -->If TalkPoint transfers assets or has any change in control, user information may be transferred to the entity that acquires such assets or control of TalkPoint. TalkPoint shall release user information when TalkPoint considers it necessary to comply with law or as needed with respect to legal proceedings. TalkPoint e-mails its users who provide their e-mail address information dicussing the industry and TalkPoint offerings. <br><br><!-- text --><b>Information Collected</b><br><br>Unless a user provides TalkPoint with the information, TalkPoint does not collect any personally identifying information from a user accessing the TalkPoint Web site, such as a user's name or e-mail address. TalkPoint does collect information such as the domain name from which users access the Internet, the Internet address of the Web site from which users link directly to the TalkPoint Web site, the time and date of users' visit, the pages that have visited and the page "click throughs." This information enables TalkPoint to determine the number of visitors to the pages of the TalkPoint Web site and how users access the TalkPoint Web site. <br><br><b>Employment Inquiries</b><br><br>TalkPoint uses the resumes and information submitted to TalkPoint to determine whether or not a candidate's employment inquiry will be given consideration for employment openings at TalkPoint. Such information and resumes are only distributed within TalkPoint and its recruiting agencies. <br><br><b>Binding Agreement; Changes</b><br><br>Any user that accesses all or any part of the TalkPoint Web site agrees that such user is at least eighteen (18) years old and that such user has consented to this privacy policy. Each time a user accesses the TalkPoint Web site, this privacy policy should be reviewed because TalkPoint reserves the right to change this privacy policy from time to time. </span>			</td>
 		</tr>
 		<tr>
 			<td><img src="/images/blank.gif" width="250" height="1"></td>
@@ -175,18 +131,19 @@ Any user that accesses all or any part of the TalkPoint Web site agrees that suc
 	<!-- --------------------------------- -->
 <!--                                   -->
 <!--            TOP MENU               -->
+<!--            --------               -->
 <!--                                   -->
 <!-- --------------------------------- -->
 
 <div id="MainMenu" style="position:absolute; height:17px; z-index:2; left: 4px; top: 120px; visibility: visible">
 	<table cellpadding="0" cellspacing="0" border="0">
 		<tbody><tr>
-					<td class="menuCell"><a href="/pages/index.html" onmouseout="MM_swapImgRestore()" onmouseover="showHoriz('7', 0); MM_swapImage('MENU_7','','/menu-over/home.gif',1)" "="" class="menu"><img name="MENU_7" src="/menu/home.gif" border="0" width="107" height="31"></a></td>
-			<td class="menuCell"><a href="/pages/about/about.html" onmouseout="MM_swapImgRestore()" onmouseover="showHoriz('1', 0); MM_swapImage('MENU_1','','/menu-over/about.gif',1)" "="" class="menu"><img name="MENU_1" src="/menu/about.gif" border="0" width="87" height="31"></a></td>
-			<td class="menuCell"><a href="/pages/services/services.html" onmouseout="MM_swapImgRestore()" onmouseover="showHoriz('2', 0); MM_swapImage('MENU_2','','/menu-over/services.gif',1)" "="" class="menu"><img name="MENU_2" src="/menu/services.gif" border="0" width="141" height="31"></a></td>
-			<td class="menuCell"><a href="/pages/solutions/solutions.html" onmouseout="MM_swapImgRestore()" onmouseover="showHoriz('3', 0); MM_swapImage('MENU_3','','/menu-over/TPsolutions.gif',1)" "="" class="menu"><img name="MENU_3" src="/menu/TPsolutions.gif" border="0" width="165" height="31"></a></td>
-			<td class="menuCell"><a href="/pages/demo/democenter.html" onmouseout="MM_swapImgRestore()" onmouseover="showHoriz('5', 0); MM_swapImage('MENU_5','','/menu-over/demo.gif',1)" "="" class="menu"><img name="MENU_5" src="/menu/demo.gif" border="0" width="118" height="31"></a></td>
-			<td class="menuCell"><a href="/pages/contact/contactus.php" onmouseout="MM_swapImgRestore()" onmouseover="showHoriz('6', 0); MM_swapImage('MENU_6','','/menu-over/contact.gif',1)" "="" class="menu"><img name="MENU_6" src="/menu/contact.gif" border="0" width="134" height="31"></a></td>
+					<td class="menuCell"><a href="/pages/index.html" onmouseout="MM_swapImgRestore()" onmouseover="showHoriz('7', 0); MM_swapImage('MENU_7','','/menu-over/home.gif',1)" "="" class="menu"><img name="MENU_7" src="/menu/home.gif" border="0" width="107" height="31"><!-- MENU_7 == MENU_0 || MENU_9 --></a></td>
+			<td class="menuCell"><a href="/pages/about/about.html" onmouseout="MM_swapImgRestore()" onmouseover="showHoriz('1', 0); MM_swapImage('MENU_1','','/menu-over/about.gif',1)" "="" class="menu"><img name="MENU_1" src="/menu/about.gif" border="0" width="87" height="31"><!-- MENU_1 == MENU_0 || MENU_9 --></a></td>
+			<td class="menuCell"><a href="/pages/services/services.html" onmouseout="MM_swapImgRestore()" onmouseover="showHoriz('2', 0); MM_swapImage('MENU_2','','/menu-over/services.gif',1)" "="" class="menu"><img name="MENU_2" src="/menu/services.gif" border="0" width="141" height="31"><!-- MENU_2 == MENU_0 || MENU_9 --></a></td>
+			<td class="menuCell"><a href="/pages/solutions/solutions_63004.html" onmouseout="MM_swapImgRestore()" onmouseover="showHoriz('3', 0); MM_swapImage('MENU_3','','/menu-over/TPsolutions.gif',1)" "="" class="menu"><img name="MENU_3" src="/menu/TPsolutions.gif" border="0" width="165" height="31"><!-- MENU_3 == MENU_0 || MENU_9 --></a></td>
+			<td class="menuCell"><a href="/pages/demo/demo_center_60304.html" onmouseout="MM_swapImgRestore()" onmouseover="showHoriz('5', 0); MM_swapImage('MENU_5','','/menu-over/demo.gif',1)" "="" class="menu"><img name="MENU_5" src="/menu/demo.gif" border="0" width="118" height="31"><!-- MENU_5 == MENU_0 || MENU_9 --></a></td>
+			<td class="menuCell"><a href="/pages/contact/contactus2.html" onmouseout="MM_swapImgRestore()" onmouseover="showHoriz('6', 0); MM_swapImage('MENU_6','','/menu-over/contact.gif',1)" "="" class="menu"><img name="MENU_6" src="/menu/contact.gif" border="0" width="134" height="31"><!-- MENU_6 == MENU_0 || MENU_9 --></a></td>
  		</tr>
  	</tbody></table>
 </div>
