--- a/s/so/sol/solo-e.com.html
+++ b/s/so/sol/solo-e.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the solo-e.com privacy policy that was archived on 2004-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040606121013id_/http%3A//solo-e.com/mainfiles/privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the solo-e.com privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206193716id_/http%3A//www.solo-e.com/mainfiles/privacy.shtml) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 
@@ -123,21 +123,21 @@ function MM_swapImage() { //v3.0
 
       <img src="http://solo-e.com/images/name.jpg" width="780" height="104"> <table width="100%" height="30" border="0" cellpadding="0" cellspacing="0" background="http://solo-e.com/newimages/texttop.png">
   <tbody><tr bordercolor="#FFFFFF">
-    <td width="80" valign="middle"><div align="center"><a href="http://www.solo-e.com/index.shtml" class="topmenu">Home</a></div></td>
+    <td width="87" valign="middle"><div align="center"><a href="http://www.solo-e.com/index.shtml" class="topmenu">Home</a></div></td>
     <td width="6" valign="top"><img src="http://solo-e.com/newimages/menuspace.png" width="6" height="28"></td>
-    <td width="110"><div align="center"><a href="http://www.solo-e.com/mainfiles/whoweare.shtml" class="topmenu">About Solo-E</a> </div></td>
+    <td width="120"><div align="center"><a href="http://www.solo-e.com/mainfiles/whoweare.shtml" class="topmenu">About Solo-E</a> </div></td>
     <td width="6"><img src="http://solo-e.com/newimages/menuspace.png" width="6" height="28"></td>
-    <td width="70"><div align="center"><a href="http://www.solo-e.com/FAQ/faq.shtml" class="topmenu">FAQ</a><a href="#"></a></div></td>
+    <td width="85"><div align="center"><a href="http://www.solo-e.com/solo-u/index.shtml" class="topmenu">Solo-U</a></div></td>
     <td width="6"><img src="http://solo-e.com/newimages/menuspace.png" width="6" height="28"></td>
-    <td width="80"><div align="center"><a href="http://www.solo-e.com/cgi-bin/artman/exec/search.cgi?fields=art_field11&amp;keyword" class="topmenu">Solo-U</a></div></td>
+    <td width="87"><div align="center"><a href="http://www.solo-e.com/amember/communitylogin.php" class="topmenu">Forums</a><a href="#"></a></div></td>
     <td width="6"><img src="http://solo-e.com/newimages/menuspace.png" width="6" height="28"></td>
-    <td width="80"><div align="center"><a href="http://www.solo-e.com/amember/communitylogin.php" class="topmenu">Forums</a><a href="#"></a></div></td>
-    <td width="6"><img src="http://solo-e.com/newimages/menuspace.png" width="6" height="28"></td>
-    <td width="100"><div align="center"><a href="http://www.solo-e.com/NEWS/news.shtml" class="topmenu">Solo-E News </a></div></td>
+    <td width="109"><div align="center"><a href="http://www.solo-e.com/NEWS/news.shtml" class="topmenu">News/FAQ </a></div></td>
     <td width="9"><img src="http://solo-e.com/newimages/menuspace.png" width="6" height="28"></td>
-    <td width="100"><div align="center"><a href="http://www.solo-e.com/mainfiles/owners_founders.shtml" class="topmenu">Team Solo-E </a></div></td>
+    <td width="109"><div align="center"><a href="http://www.solo-e.com/mainfiles/owners_founders.shtml" class="topmenu">Team Solo-E </a></div></td>
     <td width="9"><img src="http://solo-e.com/newimages/menuspace.png" width="6" height="28"></td>
-    <td width="100"><div align="center"><a href="http://www.solo-e.com/members/" class="topmenu">My Solo-E </a></div></td>
+    <td width="90"><div align="center"><a href="http://www.solo-e.com/members/" class="topmenu">My Solo-E </a></div></td>
+    <td width="10"><img src="http://solo-e.com/newimages/menuspace.png" width="6" height="28"></td>
+    <td width="110"><div align="center"><a href="https://www.solo-e.com/amember/signup.php" class="topmenu">JOIN NOW </a></div></td>
   </tr>
 </tbody></table>
 
@@ -267,9 +267,12 @@ function MM_swapImage() { //v3.0
 
             <p> <b>Communications from the Site</b></p>
             <p><span class="headers">Announcements</span><br>
-              We send all new members a welcoming e-mail(s).  Out of respect for 
+              We send all new members a welcoming e-mail(s). Out of respect for 
               the privacy of our users we present the option to not receive these 
-              types of communications. Please see the Choice/Opt-out section.</p>
+              types of communications. Please see the Choice/Opt-out section. 
+              (If you are not receiving the emails you requested from Solo-E.com, 
+              please visit our <a href="http://www.solo-e.com/FAQ/faq.shtml">FAQs</a> 
+              for possible solutions.)</p>
 
             <p><span class="headers">Service Announcements</span><br>
 
