--- a/c/ci/cit/citizenship.gov.au.html
+++ b/c/ci/cit/citizenship.gov.au.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the citizenship.gov.au privacy policy that was archived on 2004-06-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040604221141id_/http%3A//www.citizenship.gov.au/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the citizenship.gov.au privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206195334id_/http%3A//www.citizenship.gov.au/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
       <title>
@@ -15,7 +15,7 @@
  <div id="container">
  <div id="topcontainer">
 <div id="top">
-<img src="/_inc/img/crest.gif" alt="Australian Citizenship" width="313" height="80">
+  <a href="/index.htm"><img src="/_inc/img/crest_home.gif" alt="Australian Citizenship" width="313" height="80" class="imgnoborder"></a>
 </div>
 </div>
 <div id="headertext">There's never been a better time to become an Australian Citizen</div>
@@ -228,7 +228,7 @@
  
 
 <div id="bottomlinks"><a href="/info/factsheets.htm">Fact Sheets</a> | <a href="http://www.immi.gov.au/search_for/publications/index.htm">Reports</a>
-              | <a href="http://www.immi.gov.au">DIMIA Home</a>
+              | <a href="http://www.immi.gov.au">Immigration web site</a>
 
               |  <a href="/how/applykit.htm">Apply
               Today</a></div>
