--- a/e/ec/ecl/eclickz.com.html
+++ b/e/ec/ecl/eclickz.com.html
@@ -1,22 +1,14 @@
-<!--The following is the downloaded HTML source of the eclickz.com privacy policy that was archived on 2004-04-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040401135613id_/http%3A//www.eclickz.com/about/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the eclickz.com privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206195550id_/http%3A//www.eclickz.com/about/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 <title>eClickz - Privacy Policy</title>
-<meta name="keywords" content="pay per click search engines, pay for placement, pay for ranking search engines, pay for ranking, pay per click, bid for placement, ppc, search, affiliates">
+<meta name="keywords" content="pay per click search engine, pay per click, pay for placement, pay for ranking, pay for placement, pay for ranking, pay perclick, eclickz, ppc, cpc, search engines, bid for location, cost per click, pay for performance">
 <meta name="description" content="eClickz.com is a leading pay per click (ppc) search engine.  (also referred to as pay for placement, pay for ranking, bid for placement, bid for position) goto eClickz, a leader in internet advertising!">
 <link rel="stylesheet" href="http://www.eclickz.com/css/stylesheet.css" type="text/css">
-<script src="http://www.eclickz.com/css/util.js" language="javascript"></script>
-<script language="javascript">
-        initApp()
-        if ( brName=="Netscape")
-                loadSheet('http://www.eclickz.com/css/ne_style.css')
-        else
-                loadSheet('http://www.eclickz.com/css/ie_style.css')
-</script>
 </head>
 
-<body bgcolor="#FFFFFF" text="#000000" link="#0000FF" vlink="#0000FF" alink="#FF9900" bottommargin="0">
+<body bgcolor="#FFFFFF" text="#000000" link="#0000FF" vlink="#0000FF" alink="#FF9900" bottommargin="0" leftmargin="0">
 
 <center>
 
@@ -41,12 +33,13 @@
 <td align="center"><nobr>&nbsp;<font face="arial,sans-serif" size="2"><b><a href="http://www.eclickz.com/affiliates/"><font class="x" color="#FFFFFF">Affiliates &amp; Partners</font></a>&nbsp;</b></font></nobr></td><td align="middle"><font face="arial,sans-serif" size="2" color="#FFFFFF">|</font></td>
 <td align="center"><nobr>&nbsp;<font face="arial,sans-serif" size="2"><b><a href="http://www.eclickz.com/about/"><font class="x" color="#FFFFFF">About eClickz</font></a>&nbsp;</b></font></nobr></td><td align="middle"><font face="arial,sans-serif" size="2" color="#FFFFFF">|</font></td>
 <td align="center"><nobr>&nbsp;<font face="arial,sans-serif" size="2"><b><a href="http://www.eclickz.com/help/"><font class="x" color="#FFFFFF">Help</font></a>&nbsp;</b></font></nobr></td>
-</tr></tbody></table></td><td align="right" width="100%">&nbsp;</td></tr></tbody></table>&nbsp;<table border="0" width="100%" cellspacing="0" cellpadding="0"><tbody><tr><td>
+</tr></tbody></table></td><td align="right" width="100%">&nbsp;</td></tr></tbody></table>&nbsp;
+<table border="0" width="100%" cellspacing="0" cellpadding="0"><tbody><tr><td>
 <table border="0" cellpadding="0" cellspacing="0" width="100%">
 <tbody><tr><td bgcolor="#006699"><b><font class="big" face="arial,sans-serif" size="4" color="#FFFFFF">&nbsp;Privacy Policy</font></b></td></tr>
 <tr><td bgcolor="#000000"><img src="http://www.eclickz.com/images/x.gif" height="1" width="1" border="0"></td></tr>
 <tr><td>&nbsp;</td></tr></tbody></table>
-<table border="0" cellpadding="0" cellspacing="0" width="100%"><tbody><tr><td>
+<table border="0" cellpadding="0" cellspacing="0" width="95%"><tbody><tr><td><blockquote>
 <b><font size="2" face="arial,sans-serif">Why We Collect Personal Information</font></b><font size="2" face="arial,sans-serif"><br>
 eClickz.com collects personal information to personalize your experience with
 our site. The more we know about you, the more we can present you with
@@ -119,9 +112,6 @@ confidence, protected by the strictest security standards.</font>
 </p><p><b><font size="2" face="arial,sans-serif">Correct/Update</font></b><font size="2" face="arial,sans-serif"><br>
 This site gives users the following options for changing and modifying
 information previously provided.</font>
-</p><p><font size="2" face="arial,sans-serif">Users can send mail to the following
-postal address:<br>
-eClickz.com, Inc. 1157 Los Angeles Ave, Simi Valley, CA 93065</font>
 </p><p><b><font size="2" face="arial,sans-serif">Your Agreement to This Privacy
 Policy</font></b><font size="2" face="arial,sans-serif"><br>
 By using eClickz.com, you indicate that you agree to the collection and use of
@@ -130,8 +120,7 @@ your personal information by eClickz.com as outlined in this Privacy Policy.</fo
 Our Privacy Policy may change from time to time. Be sure to visit this page
 occasionally to find any updates we have made. We are committed to post Privacy
 Policy changes on this page so consumers can be sure of how eClickz.com is
-gathering and using information about them.</font>
-</p></td></tr></tbody></table>
+gathering and using information about them.</font></p></blockquote></td></tr></tbody></table>
 
 
 &nbsp;
@@ -144,9 +133,7 @@ gathering and using information about them.</font>
 <td align="center"><nobr>&nbsp;<font face="arial,sans-serif" size="2"><b><a href="http://www.eclickz.com/about/"><font class="x" color="#FFFFFF">About eClickz</font></a>&nbsp;</b></font></nobr></td><td align="middle"><font face="arial,sans-serif" size="2" color="#FFFFFF">|</font></td>
 <td align="center"><nobr>&nbsp;<font face="arial,sans-serif" size="2"><b><a href="http://www.eclickz.com/help/"><font class="x" color="#FFFFFF">Help</font></a>&nbsp;</b></font></nobr></td>
 </tr></tbody></table></td><td align="right" width="100%">&nbsp;</td></tr>
-<tr><td colspan="2" bgcolor="#006699"><br><font face="verdana,sans-serif" size="1" color="#FFFFFF">&nbsp;© 2004 
-eClickz.com. All rights reserved. Patents Pending | <a href="http://www.eclickz.com/about/privacy.php"><font color="#FFFFFF" class="x">Privacy Policy</font></a> | <a href="http://www.eclickz.com/about/terms.php"><font color="#FFFFFF" class="x">Terms 
-of Use</font></a> | <a href="http://www.eclickz.com/sitemap/"><font color="#FFFFFF" class="x">Site Map</font></a>
-<p>&nbsp;</p></font><p><font face="verdana,sans-serif" size="1" color="#FFFFFF">&nbsp;</font></p></td></tr></tbody></table>
+<tr><td colspan="2" bgcolor="#006699"><br><font face="verdana,sans-serif" size="1" color="#FFFFFF">&nbsp;©2004 eClickz Services, Inc. All rights reserved. Patents Pending | <a href="http://www.eclickz.com/about/privacy.php"><font color="#FFFFFF" class="x">Privacy Policy</font></a> | <a href="http://www.eclickz.com/about/terms.php"><font color="#FFFFFF" class="x">Terms of Use</font></a> | <a href="http://www.eclickz.com/sitemap/"><font color="#FFFFFF" class="x">Site Map</font></a><p>&nbsp;</p></font><p><font face="verdana,sans-serif" size="1" color="#FFFFFF">&nbsp;</font></p></td></tr></tbody></table>
+
 
 </td></tr></tbody></table></center></body></html>
